--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </div>
                             <div class="role-info">
                                 <h4 class="job-role">QA Tester (Freelance)</h4>
-                                <p class="job-dates">Current</p>
+                                <p class="job-dates">11/2024 – Current</p>
                             </div>
                         </div>
                         <div class="experience-content">
@@ -241,24 +241,7 @@
                     </div>
                 </div>
 
-                <div class="education-item">
-                    <div class="education-header">
-                        <h3 class="degree-title">Java Restaurant App Final Project</h3>
-                        <p class="institution">SDA Albania</p>
-                        <p class="dates">2023</p>
-                    </div>
-                    <div class="education-details">
-                        <p class="certificate-description">
-                            Developed a full-stack Java application simulating restaurant management functionalities.
-                        </p>
-                        <div class="project-link">
-                            <a href="https://github.com/matiasd77/Restaurant" target="_blank" rel="noopener noreferrer">
-                                <i class="fas fa-external-link-alt"></i>
-                                View Project
-                            </a>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
@@ -379,6 +362,45 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/matiasd77/SmartCampus" class="project-link"><i class="fab fa-github"></i> View on GitHub</a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="assets/ecommerce-placeholder.svg" alt="Job Recommendation System" class="project-screenshot">
+                    </div>
+                    <div class="project-content">
+                        <h3>Job Recommendation System</h3>
+                        <p>AI-powered job recommendation system for personalized career guidance and skill matching using CV analysis and semantic similarity.</p>
+                        <div class="project-tech">
+                            <span>Python</span>
+                            <span>FastAPI</span>
+                            <span>React</span>
+                            <span>MySQL</span>
+                            <span>BERT/TF-IDF</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/matiasd77/Job-Recommandation-System" class="project-link"><i class="fab fa-github"></i> View on GitHub</a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="assets/ecommerce-placeholder.svg" alt="Java Restaurant App" class="project-screenshot">
+                    </div>
+                    <div class="project-content">
+                        <h3>Java Restaurant App</h3>
+                        <p>Full-stack Java application simulating restaurant management functionalities with comprehensive backend services.</p>
+                        <div class="project-tech">
+                            <span>Java</span>
+                            <span>Spring Boot</span>
+                            <span>MySQL</span>
+                            <span>REST API</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/matiasd77/Restaurant" class="project-link"><i class="fab fa-github"></i> View on GitHub</a>
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
